--- a/wk10/simple-relations/package.json
+++ b/wk10/simple-relations/package.json
@@ -4,5 +4,8 @@
     "express": "^4.18.2",
     "sequelize": "^6.35.1",
     "sqlite3": "^5.1.6"
+  },
+  "scripts": {
+    "start": "npx nodemon server.js"
   }
 }
